using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class BaseCharacterFlags : MonoBehaviour
{
    
    public bool isMoving = false;

    
    public bool onFight = false;

    
    public bool inJump = false;

    
    public bool forcedFall = false;

    
    public bool xDash = false;

    
    public bool inXDash = false;

    
    public bool yDash = false;

    
    public bool inYDash = false;

    
    public bool isFalling = false;

    
    public bool yDashActive = true;

    
    public bool xDashActive = true;

}
